Fix issues on the text alignment in navigation bar.

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body{
     text-align: center;
     font-size: 1.2em;
     font-family: sans-serif;
+    line-height: 1.2em;
 }
 
 /* Dropdown container */
@@ -75,6 +76,7 @@ body{
     text-align: left;
     font-size: 1em;
     font-family: sans-serif;
+    line-height: 1.2em;
 }
 
 /* Change color on hover */
